RESOLVED FIXED188380
StorageManager should stop ref'ing IPC::Connections as this is leak-prone
https://bugs.webkit.org/show_bug.cgi?id=188380
Summary StorageManager should stop ref'ing IPC::Connections as this is leak-prone
Chris Dumez
Reported 2018-08-07 10:48:04 PDT
StorageManager should stop ref'ing IPC::Connections as this is leak-prone.
Attachments
Patch (26.64 KB, patch)
2018-08-07 10:49 PDT, Chris Dumez
achristensen: review+
Chris Dumez
Comment 1 2018-08-07 10:49:43 PDT
Alex Christensen
Comment 2 2018-08-07 11:48:50 PDT
Comment on attachment 346715 [details] Patch This feels like a problem that could also be solved with WeakPtr. Would that make the Connections too big?
Chris Dumez
Comment 3 2018-08-07 11:53:45 PDT
(In reply to Alex Christensen from comment #2) > Comment on attachment 346715 [details] > Patch > > This feels like a problem that could also be solved with WeakPtr. Would > that make the Connections too big? No, but you cannot use WeakPtr as key in a HashMap since its value changes.
Alex Christensen
Comment 4 2018-08-07 12:09:29 PDT
Radar WebKit Bug Importer
Comment 5 2018-08-07 12:10:20 PDT
Note You need to log in before you can comment on or make changes to this bug.